Dope Sheet not showing keyframes of Geometry Nodes graph #85356

Closed
opened 2021-02-04 04:35:03 +01:00 by Pablo Dobarro · 10 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-04 02:10, hash: 4895d1f9ce
Worked: (newest version of Blender that worked as expected)

Short description of error
Keyframes created for values of node of a Geometry Nodes graph don't appear in the Dope Sheet or the Graph Editor, but animation works as expected.

Screenshot from 2021-02-04 04-32-03.png

Exact steps for others to reproduce the error

  • Add a geometry nodes modifier to an object
  • Add a node with values that support keyframes in the geometry nodes graph (a Point Rotate node, for example)
  • Create a keyframe for Rotation
  • Keyframe does not appear in the Dope Sheet/Graph editor

geometry_nodes_keyframe_bug.blend

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-04 02:10, hash: `4895d1f9ce` Worked: (newest version of Blender that worked as expected) **Short description of error** Keyframes created for values of node of a Geometry Nodes graph don't appear in the Dope Sheet or the Graph Editor, but animation works as expected. ![Screenshot from 2021-02-04 04-32-03.png](https://archive.blender.org/developer/F9616472/Screenshot_from_2021-02-04_04-32-03.png) **Exact steps for others to reproduce the error** * Add a geometry nodes modifier to an object * Add a node with values that support keyframes in the geometry nodes graph (a Point Rotate node, for example) * Create a keyframe for Rotation * Keyframe does not appear in the Dope Sheet/Graph editor [geometry_nodes_keyframe_bug.blend](https://archive.blender.org/developer/F9616396/geometry_nodes_keyframe_bug.blend)
Author
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro

Added subscriber: @Alumx

Added subscriber: @Alumx

Yep, can replicate the issue, apparently the animation data exists in blender file, but there are no ways to access/edit it
image.png

Yep, can replicate the issue, apparently the animation data exists in blender file, but there are no ways to access/edit it ![image.png](https://archive.blender.org/developer/F9618164/image.png)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-02-04 16:21:48 +01:00
Member

This looks more like a TODO, needs additional code for geometra nodetrees in animdata_filter_dopesheet_ob.

Would like to get this working, will have a look.

This looks more like a TODO, needs additional code for geometra nodetrees in `animdata_filter_dopesheet_ob`. Would like to get this working, will have a look.
Philipp Oeser removed their assignment 2021-02-04 18:34:57 +01:00
Sybren A. Stüvel was assigned by Philipp Oeser 2021-02-04 18:34:57 +01:00
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

@dr.sybren: since you have the better solution at hand, hope you dont mind to take over?

@dr.sybren: since you have the better solution at hand, hope you dont mind to take over?

This issue was referenced by 0f893656f4

This issue was referenced by 0f893656f4d1c389fb67c4015d351c7156c19ca3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85356
No description provided.