Fix T85356: Dope Sheet not showing keyframes of Geometry Nodes graph

The animation filter wasn't following ID pointers to Node Trees yet.